@@ -13,6 +13,7 @@ import com.programmingtechie.appointment_service.dto.request.AppointmentCountReq
 import com.programmingtechie.appointment_service.dto.request.AppointmentSearchRequest;
 import com.programmingtechie.appointment_service.dto.response.AppointmentCountResponse;
 import com.programmingtechie.appointment_service.dto.response.Medical.AppointmentTimeFrameResponse;
+import com.programmingtechie.appointment_service.dto.response.Medical.ServiceTimeFrameInAppointmentResponse;
 import com.programmingtechie.appointment_service.dto.response.Patient.PatientResponse;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
@@ -284,12 +285,47 @@ public class AppointmentService {
         appointmentRepository.delete(appointment);
     }
 
-    public PageResponse<AppointmentResponse> getAllAppointments(int page, int size) {
+    public PageResponse<AppointmentResponse> getAllAppointments(int page, int size, String status, String id) {
         Pageable pageable = PageRequest.of(page - 1, size);
-        Page<Appointment> appointments = appointmentRepository.findAll(pageable);
-        List<AppointmentResponse> data = appointments.stream()
+
+        // Nếu status là chuỗi rỗng, chuyển thành "empty" để tìm kiếm
+        if (status == null || status.isEmpty()) {
+            status = ""; // Truyền chuỗi rỗng cho trường hợp không có status
+        }
+
+        // Lấy danh sách các cuộc hẹn từ repository
+        Page<Appointment> appointments = appointmentRepository.getAllAppointment(pageable, status, id);
+
+        // Chuyển đổi thành AppointmentResponse
+        List<AppointmentResponse> data = appointments.getContent().stream()
                 .map(appointmentMapper::toAppointmentResponse)
-                .toList();
+                .collect(Collectors.toList());
+
+        // Lấy danh sách ServiceTimeFrameIds từ các AppointmentResponse
+        List<String> serviceTimeFrameIds = data.stream()
+                .map(AppointmentResponse::getServiceTimeFrameId)
+                .collect(Collectors.toList());
+
+        try {
+            // Lấy thông tin ServiceTimeFrame từ MedicalClient
+            List<ServiceTimeFrameInAppointmentResponse> serviceTimeFrames = medicalClient.getByIds(serviceTimeFrameIds);
+
+            // Tạo một map ánh xạ từ serviceTimeFrameId sang ServiceTimeFrame
+            Map<String, ServiceTimeFrameInAppointmentResponse> serviceTimeFrameMap = serviceTimeFrames.stream()
+                    .collect(Collectors.toMap(ServiceTimeFrameInAppointmentResponse::getId, serviceTimeFrame -> serviceTimeFrame));
+
+            // Cập nhật thông tin ServiceTimeFrame vào mỗi AppointmentResponse
+            data.forEach(item -> {
+                ServiceTimeFrameInAppointmentResponse serviceTimeFrame = serviceTimeFrameMap.get(item.getServiceTimeFrameId());
+                if (serviceTimeFrame != null) {
+                    item.setServiceTimeFrame(serviceTimeFrame);
+                }
+            });
+        } catch (Exception e) {
+            log.info("Lỗi kết nối đến Medical Service: " + e.getMessage());
+        }
+
+        // Trả về kết quả với pagination
         return PageResponse.<AppointmentResponse>builder()
                 .currentPage(page)
                 .pageSize(size)
@@ -298,6 +334,8 @@ public class AppointmentService {
                 .data(data)
                 .build();
     }
+
+
 
     public PageResponse<AppointmentResponse> getAppointmentByPatientsId(String id, int page, int size) {
         Pageable pageable = PageRequest.of(page - 1, size);
@@ -455,5 +493,9 @@ public class AppointmentService {
                     .build();
         }
         throw new IllegalArgumentException("Principal không hợp lệ hoặc không phải là JWT");
+    }
+
+    public List<String> getDistinctStatuses() {
+        return appointmentRepository.findDistinctStatuses();
     }
 }
